src/objects/Apttus_Config2__ProductOptionGroup__c.object
<CustomObject>
    <description>Represents a product option group which is a member of the list of option groups associated with a product.</description>
    <fields>
        <fullName>Apttus_Config2__ContentType__c</fullName>
        <description>Based on the choice Options, Attributes or Detail Page Url contents are displayed. Detail page is displayed inside iframe. Default value is Options.</description>
        <inlineHelpText>Based on the choice Options, Attributes or Detail Page Url contents are displayed.</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Options</fullName>
                    <default>true</default>
                    <label>Options</label>
                </value>
                <value>
                    <fullName>Attributes</fullName>
                </value>
                <value>
                    <fullName>Detail Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DetailPage__c</fullName>
        <description>Detail Page URL content is displayed inside iframe</description>
        <inlineHelpText>Detail Page URL content to is displayed inside iframe</inlineHelpText>
        <label>Detail Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the options group is hidden in the page.</description>
        <inlineHelpText>Check this field to hide the option group and its components in the select options pages.</inlineHelpText>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsLeaf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the group in the hierarchy is a leaf group.</description>
        <label>Is Leaf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display the options as picklist values.</description>
        <inlineHelpText>When checked options within the options group will be displayed as picklist items</inlineHelpText>
        <label>Is Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Left__c</fullName>
        <description>The left visitation sequence</description>
        <label>Left</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Level__c</fullName>
        <description>The level in the option group hierarchy</description>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxOptions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The maximum number of options that may be selected from the group. The number can be zero.</description>
        <label>Max Options</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxTotalQuantityExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Max Total Quantity Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Option Groups</relationshipLabel>
        <relationshipName>MaxTotalQuantityExpressionId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxTotalQuantity__c</fullName>
        <description>The maximum total quantity of options that may be selected. A blank value indicates there is no limit.</description>
        <inlineHelpText>The maximum total quantity of options that may be selected. A blank value indicates there is no limit.</inlineHelpText>
        <label>Max Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinOptions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The minimum number of options that must be selected from the group. The number can be zero.</description>
        <label>Min Options</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinTotalQuantityExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Min Total Quantity Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Option Groups (Min Total Quantity Expression)</relationshipLabel>
        <relationshipName>MinTotalQuantityExpressionId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinTotalQuantity__c</fullName>
        <description>The minimum total quantity of options that must be selected. A blank value indicates there is no limit.</description>
        <inlineHelpText>The minimum total quantity of options that must be selected. A blank value indicates there is no limit.</inlineHelpText>
        <label>Min Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ModifiableType__c</fullName>
        <description>Indicates the type of modification allowed during selection. Variable indicates the option group and its components are modifiable and Fixed indicates the option group is not modifiable.</description>
        <label>Modifiable Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                    <default>true</default>
                    <label>Variable</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionGroupId__c</fullName>
        <description>ID of the associated classification</description>
        <label>Option Group</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Offerings</relationshipLabel>
        <relationshipName>Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentOptionGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent option group</description>
        <label>Parent Option Group</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Child Option Groups</relationshipLabel>
        <relationshipName>ChildOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeGroupMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Attribute Group Member Id</description>
        <inlineHelpText>Product Attribute Group</inlineHelpText>
        <label>Product Attribute Group</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroupMember__c</referenceTo>
        <relationshipLabel>Product Option Groups</relationshipLabel>
        <relationshipName>ProductOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Option Groups</relationshipLabel>
        <relationshipName>OptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Right__c</fullName>
        <description>The right visitation sequence</description>
        <label>Right</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RootOptionGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primordial option group</description>
        <label>Root Option Group</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Descendant Option Groups</relationshipLabel>
        <relationshipName>DescendantOptionGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RootSequence__c</fullName>
        <description>The root group sequence</description>
        <label>Root Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The group display sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-8998: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-8998: Used for master data key generation</description>
        <displayFormat>POG-{00000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <label>Product Option Group</label>
    <nameField>
        <displayFormat>PG-{0000000000}</displayFormat>
        <label>Option Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>